Making the groupby function more readable